[gd_scene load_steps=6 format=2]

[ext_resource path="res://SistemaGrid/scenes/menuComponentes.tscn" type="PackedScene" id=1]
[ext_resource path="res://SistemaGrid/assets/blueprint.png" type="Texture" id=2]
[ext_resource path="res://SistemaGrid/scenes/GridContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://SistemaGrid/assets/circuito/restart.png" type="Texture" id=4]
[ext_resource path="res://SistemaGrid/scripts/grid.gd" type="Script" id=14]

[node name="Node2D" type="Node2D"]
script = ExtResource( 14 )

[node name="Blueprint" type="Sprite" parent="."]
position = Vector2( 793, 530 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="menuComponentes" parent="." instance=ExtResource( 1 )]
position = Vector2( 1583, 143 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 887, 498 )
current = true
zoom = Vector2( 2, 2 )

[node name="GridContainer" parent="." instance=ExtResource( 3 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = -104.0
margin_top = -69.0
margin_right = 29.0
margin_bottom = 58.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="restart" type="TextureButton" parent="CenterContainer"]
margin_left = 3.0
margin_right = 130.0
margin_bottom = 127.0
action_mode = 0
texture_normal = ExtResource( 4 )

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_left = -104.0
margin_top = 99.0
margin_right = 29.0
margin_bottom = 226.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="start" type="TextureButton" parent="CenterContainer2"]
margin_left = 3.0
margin_right = 130.0
margin_bottom = 127.0
action_mode = 0
texture_normal = ExtResource( 4 )

[connection signal="pressed" from="CenterContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CenterContainer2/start" to="." method="_on_start_pressed"]
